<resources>
    <string name="app_name">FinalProjectEK</string>
    <string name="action_settings">Settings</string>
    <string name="Title"> المطبخ الإلكتروني </string>
    <string name="Register"> التسجيل </string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="login_email">  البريد الالكتروني   </string>
    <string name="login_password">  كلمة المرور </string>
    <string name="login_forgot_password">  نسيت كلمة المرور </string>
    <string name="login_sign_up">  ليس لديك حساب ؟ سجل الان ..... </string>
    <string name="log_in"> تسجيل الدخول </string>
    <string name="sin_up"> إنشاء حساب جديد  </string>
    <string name="first_name"> الاسم الاول </string>
    <string name="last_name"> اسم العائلة </string>
    <string name="email"> البريد الالكتروني </string>
    <string name="phone_number"> رقم الجوال </string>
    <string name="city"> المدينة </string>
    <string name="madina"> المدينة المنورة </string>
    <string name="makka"> مكة </string>
    <string name="jeddah"> جدة </string>
    <string name="address"> العنوان </string>
    <string name="share_location"> مشـاركة الموقع </string>
    <string name="password"> كلمة المرور </string>
    <string name="confirm"> تأكيد </string>
    <string name="cancel"> الغاء</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
</resources>
