<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.Main2Activity"
    android:background="#ffffff">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Title"
        android:id="@+id/text_app_name"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:autoText="false"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:textColor="#0874f9" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/image_logo"
        android:src="@drawable/logoscreen"
        android:layout_below="@+id/text_app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/login_email"
        android:id="@+id/text_login_email"
        android:textColor="#b00af7"
        android:layout_above="@+id/et_login_password"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/login_password"
        android:id="@+id/text_login_password"
        android:textColor="#f1510d0d"
        android:layout_alignBottom="@+id/et_login_password"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/et_login_email"
        android:layout_below="@+id/image_logo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/et_login_password"
        android:layout_below="@+id/et_login_email"
        android:layout_alignRight="@+id/et_login_email"
        android:layout_alignEnd="@+id/et_login_email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/login_forgot_password"
        android:id="@+id/text_login_forgot_password"
        android:textColor="#f70606"
        android:layout_below="@+id/et_login_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:id="@+id/btn_login"
        android:layout_below="@+id/text_login_forgot_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/login_sign_up"
        android:id="@+id/textView"
        android:textColor="#23efd0"
        android:layout_below="@+id/btn_login"
        android:layout_toLeftOf="@+id/text_login_password"
        android:layout_toStartOf="@+id/text_login_password"
        android:layout_marginTop="51dp" />
</RelativeLayout>

